# soccer-predictions

./: .flake8  .gitignore  README.md  backtest.py  download_data.py  mcmc_simulation.py  mcmc_simulation_design_doc.md  pyproject.toml  run_pipeline.py  utils.py
data/: corners_training_data_iteration.csv  global_baseline_matrix.csv  goalkeeper_profiles.csv  manager_profiles.csv  manager_profiles.json  statsbomb_player_profiles.csv  team_defensive_profiles.csv
data/embeddings/: manager_embeddings.pkl  player_embeddings.pkl  zone_embeddings.pkl
data/models/: corner_outcome_xgb_experiment.pkl  corner_outcome_xgb_iteration.pkl  corner_outcome_xgb_production.pkl  corner_routine_xgb_experiment.pkl  corner_routine_xgb_iteration.pkl  corner_routine_xgb_production.pkl  logistic_regression_iteration_destination.pkl  logistic_regression_iteration_outcome.pkl  logistic_regression_production_destination.pkl  logistic_regression_production_outcome.pkl  neural_network_destination_scaler.pkl  neural_network_iteration_destination.pkl  neural_network_iteration_outcome.pkl  neural_network_outcome_scaler.pkl  neural_network_production_destination.pkl  neural_network_production_outcome.pkl  (+6 more)
experiments/: corner_modeling.ipynb  corners_data.ipynb  feature_importance.ipynb  hybrid_nn_state_transitions.ipynb  sequence_history_experiment.ipynb
ml_model/: backtest.py  features.py  models.py  pytorch_models.py  simulator.py  train.py  train_embeddings.py
test/: __init__.py  backtest_test.py  download_data_test.py  mcmc_simulation_test.py  run_pipeline_test.py  utils_test.py
(+34 files in other folders)
