[tool.poetry]
name = "soccer-predictions"
version = "0.1.0"
description = "MCMC Soccer Predictions using StatsBomb Data"
authors = ["Paulo Tanaka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
pandas = "*"
statsbombpy = "*"
click = "^8.0.0"
scikit-learn = "*"
torch = "*"
xgboost = "*"
scipy = "*"
plotly = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

